--- a/Lesson9/movieproject/src/main/res/layout/activity_main.xml
+++ b/Lesson9/movieproject/src/main/res/layout/activity_main.xml
@@ -36,8 +36,8 @@
 
     <TextView
         android:id="@+id/noDataText"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="226dp"
+        android:layout_height="40dp"
         android:text="Нет данных!"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
