--- a/Lesson12/ScrollViewApp/retrofitapp/src/main/res/layout/item.xml
+++ b/Lesson12/ScrollViewApp/retrofitapp/src/main/res/layout/item.xml
@@ -9,6 +9,13 @@
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:textSize="18sp"	/>
+    <ImageView
+        android:id="@+id/imageTodo"
+        android:layout_width="64dp"
+        android:layout_height="64dp"
+        android:contentDescription="@string/app_name"
+        android:scaleType="centerCrop"
+        android:layout_marginEnd="12dp" />
     <CheckBox
         android:id="@+id/checkBoxCompleted"
         android:layout_width="wrap_content"
