--- a/RingStore/app/src/main/res/navigation/nav_graph_main.xml
+++ b/RingStore/app/src/main/res/navigation/nav_graph_main.xml
@@ -2,25 +2,35 @@
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/nav_graph_main"
-    app:startDestination="@id/userInfoFragment">
+    app:startDestination="@id/ringListFragment">
 
+    <!--Профиль-->
     <fragment android:id="@+id/userInfoFragment"
         android:name="ru.mirea.gracheva.ringstore.presentation.UserInfoFragment">
-        <action android:id="@+id/action_userInfoFragment_to_metalPriceFragment"
-            app:destination="@id/metalPriceFragment" />
-        <action android:id="@+id/action_userInfoFragment_to_ringListFragment"
-            app:destination="@id/ringListFragment" />
     </fragment>
-
+    <!--Цены на металлы-->
     <fragment android:id="@+id/metalPriceFragment"
         android:name="ru.mirea.gracheva.ringstore.presentation.MetalPriceFragment">
-        <action android:id="@+id/action_metalPriceFragment_to_userInfoFragment"
-            app:destination="@id/userInfoFragment" />
     </fragment>
-
+    <!--Каталог колец-->
     <fragment android:id="@+id/ringListFragment"
         android:name="ru.mirea.gracheva.ringstore.presentation.RingListFragment">
-        <action android:id="@+id/action_ringListFragment_to_userInfoFragment"
+    </fragment>
+    <!--Избранное-->
+    <fragment android:id="@+id/favoritesFragment"
+        android:name="ru.mirea.gracheva.ringstore.presentation.FavoritesFragment">
+    </fragment>
+    <!--Авторизация-->
+    <fragment android:id="@+id/authFragment"
+        android:name="ru.mirea.gracheva.ringstore.presentation.AuthFragment">
+        <action android:id="@+id/action_authFragment_to_registerFragment"
+            app:destination="@id/registerFragment" />
+        <action android:id="@+id/action_authFragment_to_userInfoFragment"
             app:destination="@id/userInfoFragment" />
+    </fragment>
+    <fragment android:id="@+id/registerFragment"
+        android:name="ru.mirea.gracheva.ringstore.presentation.RegisterFragment">
+        <action android:id="@+id/action_registerFragment_to_authFragment"
+            app:destination="@id/authFragment" />
     </fragment>
 </navigation>
