--- a/RingStore/app/src/main/res/navigation/nav_graph_main.xml
+++ b/RingStore/app/src/main/res/navigation/nav_graph_main.xml
@@ -7,6 +7,10 @@
     <!--Профиль-->
     <fragment android:id="@+id/userInfoFragment"
         android:name="ru.mirea.gracheva.ringstore.presentation.UserInfoFragment">
+        <action android:id="@+id/action_userInfoFragment_to_ringListFragment"
+            app:destination="@id/ringListFragment"
+            app:popUpTo="@id/userInfoFragment"
+            app:popUpToInclusive="true"/>
     </fragment>
     <!--Цены на металлы-->
     <fragment android:id="@+id/metalPriceFragment"
@@ -26,7 +30,9 @@
         <action android:id="@+id/action_authFragment_to_registerFragment"
             app:destination="@id/registerFragment" />
         <action android:id="@+id/action_authFragment_to_userInfoFragment"
-            app:destination="@id/userInfoFragment" />
+            app:destination="@id/userInfoFragment"
+            app:popUpTo="@id/userInfoFragment"
+            app:popUpToInclusive="true"/>
     </fragment>
     <fragment android:id="@+id/registerFragment"
         android:name="ru.mirea.gracheva.ringstore.presentation.RegisterFragment">
