--- a/RingStore/app/src/main/res/layout/fragment_user_info.xml
+++ b/RingStore/app/src/main/res/layout/fragment_user_info.xml
@@ -15,16 +15,9 @@
         android:layout_height="wrap_content"
         android:layout_width="wrap_content"/>
 
-    <TextView
-        android:id="@+id/role_text"
-        android:textColor="#FFFFFF"
-        android:textSize="20sp"
-        android:layout_height="wrap_content"
-        android:layout_width="wrap_content"/>
-
     <Button
-        android:id="@+id/goToMetalsButton"
-        android:text="Перейти к ценам на металлы"
+        android:id="@+id/loginButton"
+        android:text="Войти"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textColor="#FFFFFF"
@@ -40,14 +33,12 @@
         android:layout_marginTop="16dp"/>
 
     <Button
-        android:id="@+id/goToRingsButton"
-        android:text="Посмотреть кольца"
+        android:id="@+id/editProfileButton"
+        android:text="Редактировать профиль"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textColor="#FFFFFF"
         android:backgroundTint="#444444"
         android:layout_marginTop="16dp"/>
-
-
 
 </LinearLayout>
