--- a/RingStore/app/src/main/res/layout/fragment_favorites.xml
+++ b/RingStore/app/src/main/res/layout/fragment_favorites.xml
@@ -1,52 +1,85 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#000000"
-    android:gravity="clip_vertical"
-    android:orientation="vertical"
     android:padding="16dp">
 
+    <!-- Заголовок - ВСЕГДА ВИДИМ -->
+    <TextView
+        android:id="@+id/headerText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="32dp"
+        android:text="Избранное"
+        android:textColor="#FFFFFF"
+        android:textSize="34sp" />
 
-    <TableRow
+    <!-- ProgressBar - ПОСЕРЕДИНЕ при загрузке -->
+    <ProgressBar
+        android:id="@+id/progressBar"
+        style="?android:attr/progressBarStyleLarge"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:visibility="gone" />
+
+    <!-- Контейнер контента (под заголовком до низа) -->
+    <FrameLayout
+        android:id="@+id/contentContainer"
         android:layout_width="match_parent"
-        android:layout_height="277dp"
-        android:gravity="center_horizontal">
+        android:layout_height="match_parent"
+        android:layout_below="@id/headerText"
+        android:visibility="gone">
 
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recyclerFavorites"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:visibility="gone" />
+
+        <!-- Пустой список - ПОСЕРЕДИНЕ -->
         <TextView
-            android:id="@+id/headerText"
+            android:id="@+id/emptyFavoritesText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Избранное"
+            android:layout_gravity="center"
+            android:text="В вашем избранном пока пусто!"
             android:textColor="#FFFFFF"
-            android:textSize="34sp"
-            tools:text="Избранное" />
-    </TableRow>
+            android:textSize="24sp"
+            android:visibility="gone" />
 
-    <TableRow
+    </FrameLayout>
+
+    <!-- Гость - ПОСЕРЕДИНЕ ЭКРАНА -->
+    <LinearLayout
+        android:id="@+id/guestContainer"
         android:layout_width="match_parent"
-        android:layout_height="104dp"
-        android:gravity="center|center_horizontal|center_vertical">
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:gravity="center_horizontal"
+        android:orientation="vertical"
+        android:visibility="gone">
 
         <TextView
             android:id="@+id/guestText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="16dp"
-            android:gravity="clip_horizontal|center_horizontal|center_vertical"
+            android:text="Гость"
+            android:textColor="#FFFFFF"
             android:textSize="24sp" />
-    </TableRow>
 
-    <Button
-        android:id="@+id/loginButton"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:backgroundTint="#444444"
-        android:text="Войти"
-        android:textColor="#FFFFFF" />
+        <Button
+            android:id="@+id/loginButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:backgroundTint="#444444"
+            android:text="Войти"
+            android:textColor="#FFFFFF" />
 
+    </LinearLayout>
 
-
-
-
-</LinearLayout>
+</RelativeLayout>
