--- a/RingStore/app/src/main/res/layout/fragment_user_info.xml
+++ b/RingStore/app/src/main/res/layout/fragment_user_info.xml
@@ -1,64 +1,85 @@
 <!-- res/layout/fragment_user_info.xml -->
-<LinearLayout android:orientation="vertical"
-    android:background="#000000"
+
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:gravity="center"
-    android:padding="16dp"
-    xmlns:android="http://schemas.android.com/apk/res/android">
+    android:background="#000000">
 
-    <TextView
-        android:id="@+id/name_text"
+    <ProgressBar
+        android:id="@+id/progressBar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:visibility="gone" />
+
+    <ScrollView
+        android:id="@+id/scrollView"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="16dp"
-        android:hint="Имя"
-        android:textColor="#FFFFFF"
-        android:textColorHint="#44FFFFFF"
-        android:textSize="24sp" />
+        android:layout_height="match_parent"
+        android:fillViewport="true">
 
-    <TextView
-        android:id="@+id/surname_text"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="16dp"
-        android:hint="Фамилия"
-        android:textColor="#FFFFFF"
-        android:textColorHint="#44FDFDFD"
-        android:textSize="24sp" />
+        <LinearLayout android:orientation="vertical"
+            android:background="#000000"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:padding="16dp"
+            xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <TextView
-        android:id="@+id/email_text"
-        android:textColor="#FFFFFF"
-        android:textSize="24sp"
-        android:layout_marginBottom="16dp"
-        android:layout_height="wrap_content"
-        android:layout_width="wrap_content"/>
+            <TextView
+                android:id="@+id/nameText"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="16dp"
+                android:hint="Имя"
+                android:textColor="#FFFFFF"
+                android:textColorHint="#44FFFFFF"
+                android:textSize="24sp" />
 
-    <Button
-        android:id="@+id/loginButton"
-        android:text="Войти"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textColor="#FFFFFF"
-        android:backgroundTint="#444444"/>
+            <TextView
+                android:id="@+id/surnameText"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="16dp"
+                android:hint="Фамилия"
+                android:textColor="#FFFFFF"
+                android:textColorHint="#44FDFDFD"
+                android:textSize="24sp" />
 
-    <Button
-        android:id="@+id/logOutButton"
-        android:text="Выйти из аккаунта"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textColor="#FFFFFF"
-        android:backgroundTint="#444444"
-        android:layout_marginTop="16dp"/>
+            <TextView
+                android:id="@+id/emailText"
+                android:textColor="#FFFFFF"
+                android:textSize="24sp"
+                android:layout_marginBottom="16dp"
+                android:layout_height="wrap_content"
+                android:layout_width="wrap_content"/>
 
-    <Button
-        android:id="@+id/editProfileButton"
-        android:text="Редактировать профиль"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textColor="#FFFFFF"
-        android:backgroundTint="#444444"
-        android:layout_marginTop="16dp"/>
+            <Button
+                android:id="@+id/loginButton"
+                android:text="Войти"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textColor="#FFFFFF"
+                android:backgroundTint="#444444"/>
 
-</LinearLayout>
+            <Button
+                android:id="@+id/logOutButton"
+                android:text="Выйти из аккаунта"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textColor="#FFFFFF"
+                android:backgroundTint="#444444"
+                android:layout_marginTop="16dp"/>
+
+            <Button
+                android:id="@+id/editProfileButton"
+                android:text="Редактировать профиль"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textColor="#FFFFFF"
+                android:backgroundTint="#444444"
+                android:layout_marginTop="16dp"/>
+
+        </LinearLayout>
+    </ScrollView>
+</RelativeLayout>
